# SSHTunnelVpn

./: README.md
C++/: INIReader.h  SSH  SSH.cpp  SSL  SSL.cpp  corkscrew  settings.ini  ssh  sshpass  tunnel  tunnel.cpp
Console/C++/: SSH.cpp
Console/Python/: SSL.py  settings.ini  ssh.py  tunnel.py
Python/: SSL  injector.py  nc
QTDesktop/SSHTunneller/: CMakeLists.txt  main.cpp
QTDesktop/SSHTunneller/include/: credential.h  mainwindow.h  server.h  settings.h  socket.h  socketthread.h  socksproxy.h  ssh.h  sshworker.h
QTDesktop/SSHTunneller/src/core/: mainwindow.cpp
QTDesktop/SSHTunneller/src/libssh/: ssh.cpp  sshsessionpool.cpp  sshsessionpool.h  sshworker.cpp
QTDesktop/SSHTunneller/src/server/: server.cpp  socket.cpp  socketthread.cpp  socksproxy.cpp
QTDesktop/SSHTunneller/src/utils/: credential.cpp  settings.cpp
QTDesktop/SSHTunneller/ui/: mainwindow.ui
SOCKS5/: A.py
